# Parrot

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES  install_dependencies.py  parrot.py  parrot_test.py  pyproject.toml  requirements.txt
parrot/: main.py  main_headless.py  parrot.py  parrot_utils.py  silero_onnx_vad.py
parrot/test/: parrot_test.py  test.py
pi-gen-work/: config  pi-gen-pre-build.sh
pi-gen-work/stage3/00-install-packages/: 00-packages
pi-gen-work/stage3/01-install-app/: 00-run-chroot.sh  00-run.sh
pi-gen-work/stage3/02-install-systemd-service/: 00-run-chroot.sh
pi-gen-work/stage3/03-reduce-power/: 00-run.sh
test/: parrot_test.py  test.py
