[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "parrot"
version = "1.0.2"
authors = [
  { name="Matan Nurick", email="matan.nurick@gmail.com" },
]
description = "A Silly Parrot"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "THIRD-PARTY-NOTICES"]
dependencies = [
    'numpy',
    'scipy',
    'librosa ',
    'noisereduce',
    'audiocomplib',
    'configparser',
    'pyaudio',
    'playsound3',
    'onnxruntime',
    'systemd-watchdog',
    'gpiozero',
]

[tool.setuptools.packages.find]
include = ["parrot*"]
exclude = ["test*","pi-gen-work"]
namespaces = true

[tool.setuptools.package-data]
"*" = [
    "*.py",
    "*.onnx",
    "*.mp3",
    "LICENSE",
    "THIRD-PARTY-NOTICES",
    ]
